# ImageTransformation

./: .clang-format  .editorconfig  .gitignore  ImageTransformation.sln  README.md
.github/workflows/: ci.yml
App.Forms/: App.Forms.csproj  Form1.Designer.cs  Form1.cs  Program.cs
App.Wfp/: App.Wfp_.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
App_wpf/: App.xaml  App.xaml.cs  App_wpf.csproj  BitmapConverter.cs  MainWindow.xaml  MainWindow.xaml.cs
App_wpf/TransformationControls/: Controls.cs  GeneralMatrixControls.cs  ProjectiveTransformationControls.cs  RotateControls.cs  TransformationControls.cs
App_wpf/TransformationControls/Projective rectification/: ProjectiveTransformationControls.cs
Core/: Core.csproj  Dimension.cs  Matrix.cs  TransformBitmap.cs  Transformations.cs
Core.Tests/: Core.Tests.csproj  LineIntersectionProcessorTests.cs  MatrixTests.cs  TransformationTests.cs
Core/Detection/: HoughLine.cs  LinePolar.cs  QuadrangleDetector.cs
Core/Filters/: Filters_Canny.cs  Filters_Convolution.cs  Filters_Gray.cs  Filters_RGB2YCrCb.cs
Core/Helpers/: DoubleExtender.cs
Core/LinearTransformations/: Dimension.cs  Matrix.cs  NativeTransformWrapper.cs  TransformBitmap.cs  Transformations.cs
Core/Processors/: BitmapExtender.cs  CannyProcessor.cs  LineIntersectionProcessor.cs
ImageTransformation.App/: App.xaml  App.xaml.cs  App_old.csproj  MainWindow.xaml.cs
ImageTransformation.Core/: Matrix.cs  TransformBitmap.cs  Transformations.cs
NativeCore/: API.cpp  API.h  CMakeLists.txt  LinearTransformation.cpp  LinearTransformation.h  Matrix.cpp  Matrix.h  NativeCore.vcxproj  NativeCore.vcxproj.filters
NativeCore.Test/: CMakeLists.txt  CheckRowChangeReturnSignTests.cpp  GetAdjointMatrixTests.cpp  GetDeterminantTests.cpp  GetInverseTests.cpp  GetReducedEchelonFormTests.cpp  GetSubMatrixWithoutRowAndColTests.cpp  MatrixTests.cpp  MatrixTests.h  MultiplicationTests.cpp  NativeCore.Test.vcxproj  NativeCore.Test.vcxproj.filters  TransposeTests.cpp
NativeCore.Test/MatrixTests/: CheckRowChangeReturnSignTests.cpp  GetAdjointMatrixTests.cpp  GetDeterminantTests.cpp  GetInverseTests.cpp  GetReducedEchelonFormTests.cpp  GetSubMatrixWithoutRowAndColTests.cpp  MatrixTests.cpp  MatrixTests.h  MultiplicationTests.cpp  TransposeTests.cpp
NativeCore/API/: API.cpp  API.h  dllimpexp.h
NativeCore/LinearTransformation/: LinearTransformation.cpp  LinearTransformation.h  Matrix.cpp  Matrix.h
Scripts/: build.bat  clean.bat  runapp.bat  test.bat
Scripts/dotnet/: buildDotnet.bat  cleanDotnet.bat  testDotnet.bat
Scripts/native/: buildNative.bat  cleanNative.bat  testNative.bat
